# Cpp-projects

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
projects/: CMakeLists.txt
projects/include/OPoverload/: time.hpp
projects/include/list/: list.hpp
projects/include/smartptr/: shared_ptr.hpp  unique_ptr.hpp
projects/include/soundex/: soundex.hpp  soundex_map.hpp
projects/src/: CMakeLists.txt
projects/src/OPoverload/: CMakeLists.txt  main.cpp
projects/src/list/: CMakeLists.txt  main.cpp
projects/src/smartptr/: CMakeLists.txt  main.cpp
projects/src/soundex/: CMakeLists.txt  main.cpp
projects/src/soundex/soundex/: CMakeLists.txt  soundex.cpp  soundex_map.cpp
projects/tests/: CMakeLists.txt  list.cpp  smartptr.cpp  soundex.cpp  time.cpp
projects/tests/OPoverload/: CMakeLists.txt  time.cpp
